# func

./: README.md  config.yaml  func.cabal
sample-functions/: build_all.sh
sample-functions/MarkdownRender/: func.yaml
sample-functions/ResizeImageMagick/: func.yaml
sample-functions/base/coffee/: build.sh  func.yaml
sample-functions/base/golang/: build.sh  func.yaml
sample-functions/base/java/: func.yaml
sample-functions/base/node/: build.sh  func.yaml
sample-functions/base/python/: func.yaml
sample-functions/cat/: func.yaml
sample-functions/wordcount/: func.yaml
src/: Main.hs
