name:                func
version:             0.1.0.0
synopsis:            A simple function as a service.
description:         Please see README.md
homepage:            https://github.com/Lupino/func#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable func
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scotty
                     , warp
                     , data-default-class
                     , streaming-commons
                     , optparse-applicative
                     , aeson
                     , bytestring
                     , http-types
                     , text
                     , stm
                     , yaml
                     , unix
                     , unix-time
                     , tinylog
                     , process-extras
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/func
